--- a/src/app/fanshop/fanshop.component.html
+++ b/src/app/fanshop/fanshop.component.html
@@ -19,9 +19,21 @@ fxLayoutGap="10px">
     Mit einem Kauf wird nicht nur das heimische Wohnen und sein eigener Dresscode aufgepeppt, sondern man fördert mit einem Kauf auch das Vereinsleben und den sportlichen Betrieb unseres Vereines.
   </p>
 
+  <!--
   <p class="small">
     Als Dankeschön bieten wir unseren treuen Vereinsmitgliedern einen Rabatt von 15 % auf alle Artikel an!
   </p>
+  -->
+  <h2 style="text-align: center; padding-left: 10px; padding-right: 10px;">
+    Weihnachtsspecial! Schlage jetzt zu in unserem Fanshop und erhalte bis Weihnachten 15 % Rabatt auf alle Artikel!
+  </h2>
+
+  <br>
+
+  <img class="centerWithoutWidth" src="/assets/images/xmas.jpeg" width="20%" *ngIf="!isMobile">
+  <img class="center" src="/assets/images/xmas.jpeg" width="20%" *ngIf="isMobile">
+
+  <br>
 
   <p class="small">
     Folgende Artikel stehen zur Auswahl:
