--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -16,6 +16,7 @@
 
       <button mat-menu-item [matMenuTriggerFor]="gallery"><span class="fa fa-camera fa-sm"></span> Galerie</button>
       <mat-menu #gallery="matMenu">
+          <button mat-menu-item routerLink="/gallery/2023">2023</button>
           <button mat-menu-item routerLink="/gallery/2022">2022</button>
           <button mat-menu-item routerLink="/gallery/2021">2021</button>
           <button mat-menu-item routerLink="/gallery/2019">2019</button>
@@ -65,6 +66,7 @@
 
       <button mat-menu-item [matMenuTriggerFor]="gallery"><span class="fa fa-camera fa-sm"></span> Galerie</button>
       <mat-menu #gallery="matMenu">
+          <button mat-menu-item routerLink="/gallery/2023">2023</button>
           <button mat-menu-item routerLink="/gallery/2022">2022</button>
           <button mat-menu-item routerLink="/gallery/2021">2021</button>
           <button mat-menu-item routerLink="/gallery/2019">2019</button>
