Update championship data

--- a/src/app/championship/championship.component.html
+++ b/src/app/championship/championship.component.html
@@ -111,28 +111,25 @@
     <b>Spieltermine Frühjahr 2023:</b>
   </p>
 
-  <p class="normal">3. Runde - Nachholtermin offen - Stadion Stainz - HV TDP Stainz vs. GH Prettenthaler</p>
+  <p class="normal">3. Runde - Nachholtermin, Samstag, 29.04.2023, 18:00 - Stadion Stainz - HV TDP Stainz vs. GH Prettenthaler</p>
   <hr>
 
-  <p class="normal">8. Runde - Termin noch offen - Stadion Stainz - HV TDP Stainz : STT Pichler</p>
+  <p class="normal">8. Runde - Samstag, 06.05.2023, 18:00 - Stadion Stainz - HV TDP Stainz : STT Pichler</p>
   <hr>
 
-  <p class="normal">9. Runde - Termin noch offen - Sparkassen Arena Voitsberg - GH Prettenthaler : HV TDP Stainz</p>
+  <p class="normal">9. Runde - Samstag, 13.05.2023, 18:00 - Sparkassen Arena Voitsberg - GH Prettenthaler : HV TDP Stainz</p>
   <hr>
 
-  <p class="normal">10. Runde - Termin noch offen - Sportplatz Söding - STT Fürndörfler : HV TDP Stainz</p>
+  <p class="normal">10. Runde - Freitag, 19.05.2023, 19:00 - Sportplatz Söding - STT Fürndörfler : HV TDP Stainz</p>
   <hr>
 
-  <p class="normal">11. Runde - Termin noch offen - Sportplatz Gößnitz - HFC Gößnitz : HV TDP Stainz</p>
+  <p class="normal">11. Runde - Freitag, 16.06.2023, 18:30 - Sportplatz St. Johann/Köppling - SK Hohenburg : HV TDP Stainz</p>
   <hr>
 
-  <p class="normal">12. Runde - Termin noch offen - Sportplatz St. Johann/Köppling - SK Hohenburg : HV TDP Stainz</p>
+  <p class="normal">12. Runde - Samstag, 01.07.2023, 18:30 - Sportplatz Geistthal - SV Geistthal : HV TDP Stainz</p>
   <hr>
 
-  <p class="normal">13. Runde - Termin noch offen - Sportplatz Geistthal - SV Geistthal : HV TDP Stainz</p>
-  <hr>
-
-  <p class="normal">14. Runde - Termin noch offen - Stadion Stainz - HV TDP Stainz : 1. FC Montagskicker</p>
+  <p class="normal">13. Runde - Samstag, 15.07.2023, 18:30 - Stadion Stainz - HV TDP Stainz : 1. FC Montagskicker</p>
   <hr>
   
 </div>
