--- a/src/app/championship/championship.component.html
+++ b/src/app/championship/championship.component.html
@@ -117,7 +117,7 @@
   <p class="normal">8. Runde - Samstag, 06.05.2023, 18:00 - Stadion Stainz - HV TDP Stainz : STT Pichler</p>
   <hr>
 
-  <p class="normal">9. Runde - Samstag, 13.05.2023, 18:00 - Sparkassen Arena Voitsberg - GH Prettenthaler : HV TDP Stainz</p>
+  <p class="normal">9. Runde - Freitag, 12.05.2023, 18:00 - Sparkassen Arena Voitsberg - GH Prettenthaler : HV TDP Stainz</p>
   <hr>
 
   <p class="normal">10. Runde - Freitag, 19.05.2023, 19:00 - Sportplatz Söding - STT Fürndörfler : HV TDP Stainz</p>
