update championship html

--- a/src/app/championship/championship.component.html
+++ b/src/app/championship/championship.component.html
@@ -84,7 +84,7 @@
   </p>
 
   <p class="small">
-    5. Runde - HV TDP Stainz vs. HFC Gössnitz 4:1
+    5. Runde - HV TDP Stainz vs. HFC Gössnitz 4:1 *
   </p>
 
   <p class="small">
@@ -97,6 +97,14 @@
 
   <p class="small">
     3. Runde - Nachholtermin - HV TDP Stainz vs. GH Prettenthaler 1:5
+  </p>
+
+  <p class="small">
+    8. Runde - HV TDP Stainz vs. STT Pichler 2:2
+  </p>
+
+  <p class="small">
+    * Spiel wird offiziell nicht gewertet, da Gössnitz aus der Liga ausgestiegen ist.
   </p>
 
   <br>
@@ -114,9 +122,6 @@
   <p class="normal">
     <b>Spieltermine Frühjahr 2023:</b>
   </p>
-
-  <p class="normal">8. Runde - Samstag, 06.05.2023, 18:00 - Stadion Stainz - HV TDP Stainz : STT Pichler</p>
-  <hr>
 
   <p class="normal">9. Runde - Freitag, 12.05.2023, 18:00 - Sparkassen Arena Voitsberg - GH Prettenthaler : HV TDP Stainz</p>
   <hr>
