--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,7 +7,7 @@
       <button mat-menu-item routerLink="/home" routerLinkActive="active"><span class="fa fa-users fa-sm"></span> Home</button>
       <button mat-menu-item routerLink="/news" routerLinkActive="active"><span class="fa fa-bookmark fa-sm"></span> News</button>
       <button mat-menu-item routerLink="/team" routerLinkActive="active"><span class="fa fa-portrait fa-sm"></span> Mannschaft</button>
-      
+
       <button mat-menu-item [matMenuTriggerFor]="championship"><span class="fa fa-bookmark fa-sm"></span> Meisterschaft</button>
       <mat-menu #championship="matMenu">
         <button mat-menu-item routerLink="/championship/2022-2023">Saison 2022/2023</button>
@@ -33,13 +33,14 @@
       </mat-menu>
 
       <button mat-menu-item routerLink="/donation" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Matchballspende</button>
+      <button mat-menu-item routerLink="/kleinfeldturnier" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Kleinfeldturnier</button>
       <button mat-menu-item routerLink="/hallenturnier" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Hallenturnier</button>
       <button mat-menu-item routerLink="/about" routerLinkActive="active"><span class="fa fa-info fa-sm"></span> Über uns</button>
       <button mat-menu-item routerLink="/contact" routerLinkActive="active"><span class="fa fa-info fa-sm"></span> Kontakt</button>
       <button mat-menu-item routerLink="/fanshop" routerLinkActive="active"><span class="fa fa-shopping-cart fa-sm"></span> Fanshop</button>
       <button mat-menu-item routerLink="/membership" routerLinkActive="active"><span class="fa fa-flag fa-sm"></span> Mitgliedschaft</button>
       <button mat-menu-item routerLink="/documents" routerLinkActive="active"><span class="fa fa-file fa-sm"></span> Dokumente</button>
-      
+
       <button mat-menu-item routerLink="/hallofpapp" routerLinkActive="active"><span class="fa fa-users fa-sm"></span> Hall of Papp-Fans</button>
       <button mat-menu-item routerLink="/surveys" routerLinkActive="active"><span class="fa fa-list-ol fa-sm"></span> Umfragen</button>
 
@@ -47,7 +48,7 @@
       <mat-menu #goaloftheseason="matMenu">
         <button mat-menu-item routerLink="/goaloftheseason/2022-2023">Tor der Saison 2022</button>
       </mat-menu>
-    
+
       <button mat-menu-item routerLink="/startingeleven" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Starting Eleven</button>
       <button mat-menu-item routerLink="/advent" routerLinkActive="active"><span class="fa fa-candy-cane fa-sm"></span> Adventkalender</button>
       <!-- <button mat-menu-item routerLink="/halloffame" routerLinkActive="active"><span class="fa fa-award fa-sm"></span> Hall of Fame</button> -->
@@ -58,7 +59,7 @@
       <button mat-menu-item routerLink="/home" routerLinkActive="active"><span class="fa fa-users fa-sm"></span> Home</button>
       <button mat-menu-item routerLink="/news" routerLinkActive="active"><span class="fa fa-bookmark fa-sm"></span> News</button>
       <button mat-menu-item routerLink="/team" routerLinkActive="active"><span class="fa fa-portrait fa-sm"></span> Mannschaft</button>
-      
+
       <button mat-menu-item [matMenuTriggerFor]="championship"><span class="fa fa-bookmark fa-sm"></span> Meisterschaft</button>
       <mat-menu #championship="matMenu">
         <button mat-menu-item routerLink="/championship/2022-2023">Saison 2022/2023</button>
@@ -84,13 +85,14 @@
       </mat-menu>
 
       <button mat-menu-item routerLink="/donation" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Matchballspende</button>
+      <button mat-menu-item routerLink="/kleinfeldturnier" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Kleinfeldturnier</button>
       <button mat-menu-item routerLink="/hallenturnier" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Hallenturnier</button>
       <button mat-menu-item routerLink="/about" routerLinkActive="active"><span class="fa fa-info fa-sm"></span> Über uns</button>
       <button mat-menu-item routerLink="/contact" routerLinkActive="active"><span class="fa fa-info fa-sm"></span> Kontakt</button>
       <button mat-menu-item routerLink="/fanshop" routerLinkActive="active"><span class="fa fa-shopping-cart fa-sm"></span> Fanshop</button>
       <button mat-menu-item routerLink="/membership" routerLinkActive="active"><span class="fa fa-flag fa-sm"></span> Mitgliedschaft</button>
       <button mat-menu-item routerLink="/documents" routerLinkActive="active"><span class="fa fa-file fa-sm"></span> Dokumente</button>
-      
+
       <button mat-menu-item [matMenuTriggerFor]="goaloftheseason"><span class="fa fa-list-ol fa-sm"></span> Tor der Saison</button>
       <mat-menu #goaloftheseason="matMenu">
         <button mat-menu-item routerLink="/goaloftheseason/2022-2023">Tor der Saison 2022</button>
