Adjust duckrun component

--- a/src/app/duckrun/duckrun.component.html
+++ b/src/app/duckrun/duckrun.component.html
@@ -4,7 +4,7 @@
 
      <div fxFlex>
             <div>
-               <h3 class="large header">Entenrennen 2021</h3>
+               <h3 class="large header">Entenrennen 2023</h3>
                <hr>
             </div>
      </div>
@@ -14,13 +14,13 @@
           <div fxFlex="50" fxFlexOffset="10px">
             <p class="normal">
               <p class="normal">
-                Das erste Entenrennen unserer Vereinshistorie!
+                2. Entenrennen des HV TDP Stainz
               </p>
               <p class="normal">
-                📅 WANN: Samstag, 21.08.2021<br>
+                📅 WANN: Samstag, 26.08.2023<br>
                 ⌚ START: 17 Uhr
               </p>
-              
+
               <p class="normal">
                 💰 KOSTEN<br>
                 🦆 Ente: 3 Euro<br>
@@ -32,21 +32,22 @@
                 🥇 Platz: 333 Euro<br>
                 🥈 Platz: 222 Euro<br>
                 🥉 Platz: 111 Euro<br>
-                + 🎁 Sachpreise
+                + 🎁 viele weitere Sachpreise
               </p>
-              
+
               <p class="normal">
                 KAUFMÖGLICHKEITEN<br>
                 ➡ bei Spielern und Heimspielen des HV TDP Stainz<br>
                 ➡ direkt hier auf unserer Homepage www.hvtdpstainz.at<br>
-                ➡ 📲 telefonisch unter 06644310021
+                ➡ 📲 telefonisch unter 0664/43 10 021<br>
+                ➡ bei der Trafik Schauer
               </p>
 
               <p class="normal">
                 WEITERE INFOS<br>
                 📧 E-Mail: hvtdpstainz@gmx.at
               </p>
-              
+
               <p class="normal">
                 ‼ WICHTIG ‼<br>
                 KEINE ANWESENHEITSPFLICHT nötig, die Gewinner werden nach der Veranstaltung kontaktiert!
@@ -57,15 +58,15 @@
             <!-- <h3 style="text-align: center;">Hier findest du unser Stadion:</h3> -->
             <!-- this creates a google map on the page with the given lat/lng from -->
             <!-- the component as the initial center of the map: -->
-            <img class="imageSmallCenter" src="assets/images/duckrun_2021.jpeg " style="height: 300px; width: 650px;" >
+            <img class="imageSmallCenter" src="assets/images/duckrun_2023.png " style="width: 400px;" >
           </div>
         </div>
       </div>
-      
+
       <div fxFlex fxFlexOffset="20px" class="form-size" >
           <h3>Sichere dir deine Enten gleich jetzt ⬇</h3>
           <!-- <p>{{ feedbackForm.value | json }} {{ feedbackForm.status | json }}</p> -->
-          <form novalidate [formGroup]="feedbackForm" (ngSubmit)="onSubmit()" style="background-color: darkblue;color: rgba(255,255,255,.7);border: 27.4px solid;"> 
+          <form novalidate [formGroup]="feedbackForm" (ngSubmit)="onSubmit()" style="background-color: darkblue;color: rgba(255,255,255,.7);border: 27.4px solid;">
             <p>
               <mat-form-field class="half-width"
               color="{{(formErrors.firstname) ? 'warn' : 'primary'}}">
