--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,6 +14,8 @@
           <button mat-menu-item routerLink="/championship/2021-2022">Saison 2021/2022</button>
       </mat-menu>
 
+      <button mat-menu-item routerLink="/entenlauf" routerLinkActive="active"><span class="fa fa-shopping-cart fa-sm"></span> Entenlauf</button>
+
       <button mat-menu-item [matMenuTriggerFor]="gallery"><span class="fa fa-camera fa-sm"></span> Galerie</button>
       <mat-menu #gallery="matMenu">
           <button mat-menu-item routerLink="/gallery/2023">2023</button>
@@ -65,6 +67,8 @@
         <button mat-menu-item routerLink="/championship/2022-2023">Saison 2022/2023</button>
           <button mat-menu-item routerLink="/championship/2021-2022">Saison 2021/2022</button>
       </mat-menu>
+
+      <button mat-menu-item routerLink="/entenlauf" routerLinkActive="active"><span class="fa fa-shopping-cart fa-sm"></span> Entenlauf</button>
 
       <button mat-menu-item [matMenuTriggerFor]="gallery"><span class="fa fa-camera fa-sm"></span> Galerie</button>
       <mat-menu #gallery="matMenu">
