Update duckrun content

--- a/src/app/duckrun/duckrun.component.html
+++ b/src/app/duckrun/duckrun.component.html
@@ -53,6 +53,12 @@
                 KEINE ANWESENHEITSPFLICHT nötig, die Gewinner werden nach der Veranstaltung kontaktiert!
                 <br>
               </p>
+
+              <p class="normal">
+                Die Lose werden GRATIS per Post versendet (Mindestbestellmenge: 4 Enten)!
+                <br>
+              </p>
+
             </div>
           <div fxFlex="50" fxFlexOffset="25px">
             <!-- <h3 style="text-align: center;">Hier findest du unser Stadion:</h3> -->
