Update championship season results

--- a/src/app/championship/championship.component.html
+++ b/src/app/championship/championship.component.html
@@ -68,7 +68,7 @@
 <div *ngIf="season == '2022-2023'">
 
   <p class="small">
-    <b>Bisherige Ergebnisse:</b>
+    <b>Ergebnisse:</b>
   </p>
 
   <p class="small">
@@ -77,6 +77,10 @@
 
   <p class="small">
     2. Runde - HV TDP Stainz vs. STT Fürndörfler 0:3
+  </p>
+
+  <p class="small">
+    3. Runde - HV TDP Stainz vs. GH Prettenthaler 1:5
   </p>
 
   <p class="small">
@@ -96,12 +100,30 @@
   </p>
 
   <p class="small">
-    3. Runde - Nachholtermin - HV TDP Stainz vs. GH Prettenthaler 1:5
+    8. Runde - HV TDP Stainz vs. STT Pichler 2:2
   </p>
 
   <p class="small">
-    8. Runde - HV TDP Stainz vs. STT Pichler 2:2
+    9. Runde - GH Prettenthaler : HV TDP Stainz 3:6
   </p>
+
+  <p class="small">
+    10. Runde - STT Fürndörfler : HV TDP Stainz 3:2
+  </p>
+
+  <p class="small">
+    11. Runde - SK Hohenburg : HV TDP Stainz 2:2
+  </p>
+
+  <p class="small">
+    12. Runde - SV Geistthal : HV TDP Stainz 4:5
+  </p>
+
+  <p class="small">
+    13. Runde - Montagskicker : HV TDP Stainz 0:3 (strafverifiziert)
+  </p>
+
+  <hr>
 
   <p class="small">
     * Spiel wird offiziell nicht gewertet, da Gössnitz aus der Liga ausgestiegen ist.
@@ -119,23 +141,17 @@
 
   <br>
 
+  <!--
+
   <p class="normal">
     <b>Spieltermine Frühjahr 2023:</b>
   </p>
 
-  <p class="normal">9. Runde - Freitag, 12.05.2023, 19:30 - Sparkassen Arena Voitsberg - GH Prettenthaler : HV TDP Stainz</p>
-  <hr>
-
-  <p class="normal">10. Runde - Freitag, 19.05.2023, 19:00 - Sportplatz Söding - STT Fürndörfler : HV TDP Stainz</p>
-  <hr>
-
-  <p class="normal">11. Runde - Freitag, 16.06.2023, 18:30 - Sportplatz St. Johann/Köppling - SK Hohenburg : HV TDP Stainz</p>
-  <hr>
-
   <p class="normal">12. Runde - Samstag, 01.07.2023, 18:30 - Sportplatz Geistthal - SV Geistthal : HV TDP Stainz</p>
   <hr>
 
-  <p class="normal">13. Runde - Samstag, 15.07.2023, 18:30 - Stadion Stainz - HV TDP Stainz : 1. FC Montagskicker</p>
+  -->
+
   <hr>
 
 </div>
