update championship & header

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,11 +10,12 @@
 
       <button mat-menu-item [matMenuTriggerFor]="championship"><span class="fa fa-bookmark fa-sm"></span> Meisterschaft</button>
       <mat-menu #championship="matMenu">
+        <button mat-menu-item routerLink="/championship/2023-2024">Saison 2023/2024</button>
         <button mat-menu-item routerLink="/championship/2022-2023">Saison 2022/2023</button>
-          <button mat-menu-item routerLink="/championship/2021-2022">Saison 2021/2022</button>
+        <button mat-menu-item routerLink="/championship/2021-2022">Saison 2021/2022</button>
       </mat-menu>
 
-      <button mat-menu-item routerLink="/entenlauf" routerLinkActive="active"><span class="fa fa-shopping-cart fa-sm"></span> Entenlauf</button>
+      <!-- <button mat-menu-item routerLink="/entenlauf" routerLinkActive="active"><span class="fa fa-shopping-cart fa-sm"></span> Entenlauf</button> -->
 
       <button mat-menu-item [matMenuTriggerFor]="gallery"><span class="fa fa-camera fa-sm"></span> Galerie</button>
       <mat-menu #gallery="matMenu">
@@ -35,8 +36,8 @@
       </mat-menu>
 
       <button mat-menu-item routerLink="/donation" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Matchballspende</button>
-      <button mat-menu-item routerLink="/kleinfeldturnier" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Kleinfeldturnier</button>
-      <button mat-menu-item routerLink="/bocciaturnier" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Bocciaturnier</button>
+      <!--  <button mat-menu-item routerLink="/kleinfeldturnier" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Kleinfeldturnier</button> -->
+      <!--  <button mat-menu-item routerLink="/bocciaturnier" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Bocciaturnier</button> -->
       <button mat-menu-item routerLink="/hallenturnier" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Hallenturnier</button>
       <button mat-menu-item routerLink="/about" routerLinkActive="active"><span class="fa fa-info fa-sm"></span> Über uns</button>
       <button mat-menu-item routerLink="/contact" routerLinkActive="active"><span class="fa fa-info fa-sm"></span> Kontakt</button>
@@ -65,11 +66,12 @@
 
       <button mat-menu-item [matMenuTriggerFor]="championship"><span class="fa fa-bookmark fa-sm"></span> Meisterschaft</button>
       <mat-menu #championship="matMenu">
+        <button mat-menu-item routerLink="/championship/2023-2024">Saison 2023/2024</button>
         <button mat-menu-item routerLink="/championship/2022-2023">Saison 2022/2023</button>
-          <button mat-menu-item routerLink="/championship/2021-2022">Saison 2021/2022</button>
+        <button mat-menu-item routerLink="/championship/2021-2022">Saison 2021/2022</button>
       </mat-menu>
 
-      <button mat-menu-item routerLink="/entenlauf" routerLinkActive="active"><span class="fa fa-shopping-cart fa-sm"></span> Entenlauf</button>
+      <!--  <button mat-menu-item routerLink="/entenlauf" routerLinkActive="active"><span class="fa fa-shopping-cart fa-sm"></span> Entenlauf</button> -->
 
       <button mat-menu-item [matMenuTriggerFor]="gallery"><span class="fa fa-camera fa-sm"></span> Galerie</button>
       <mat-menu #gallery="matMenu">
@@ -90,8 +92,8 @@
       </mat-menu>
 
       <button mat-menu-item routerLink="/donation" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Matchballspende</button>
-      <button mat-menu-item routerLink="/kleinfeldturnier" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Kleinfeldturnier</button>
-      <button mat-menu-item routerLink="/bocciaturnier" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Bocciaturnier</button>
+      <!--  <button mat-menu-item routerLink="/kleinfeldturnier" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Kleinfeldturnier</button> -->
+      <!--  <button mat-menu-item routerLink="/bocciaturnier" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Bocciaturnier</button> -->
       <button mat-menu-item routerLink="/hallenturnier" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Hallenturnier</button>
       <button mat-menu-item routerLink="/about" routerLinkActive="active"><span class="fa fa-info fa-sm"></span> Über uns</button>
       <button mat-menu-item routerLink="/contact" routerLinkActive="active"><span class="fa fa-info fa-sm"></span> Kontakt</button>
