--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -29,6 +29,7 @@
 
       <button mat-menu-item [matMenuTriggerFor]="videos"><span class="fa fa-video fa-sm"></span> Videos</button>
       <mat-menu #videos="matMenu">
+          <button mat-menu-item routerLink="/social/2023-2024">Saison 2023/2024</button>
           <button mat-menu-item routerLink="/social/2022-2023">Saison 2022/2023</button>
           <button mat-menu-item routerLink="/social/2021-2022">Saison 2021/2022</button>
           <button mat-menu-item routerLink="/social/2018-2019">Saison 2018/2019</button>
@@ -85,6 +86,7 @@
 
       <button mat-menu-item [matMenuTriggerFor]="videos"><span class="fa fa-video fa-sm"></span> Videos</button>
       <mat-menu #videos="matMenu">
+          <button mat-menu-item routerLink="/social/2023-2024">Saison 2023/2024</button>
           <button mat-menu-item routerLink="/social/2022-2023">Saison 2022/2023</button>
           <button mat-menu-item routerLink="/social/2021-2022">Saison 2021/2022</button>
           <button mat-menu-item routerLink="/social/2018-2019">Saison 2018/2019</button>
