--- a/src/app/championship/championship.component.html
+++ b/src/app/championship/championship.component.html
@@ -83,11 +83,23 @@
   </p>
 
   <p class="small">
+    3. Runde - SV Geistthal : HV TDP Stainz 2:7
+  </p>
+
+  <p class="small">
     2. Runde - SK Hohenburg : HV TDP Stainz 1:2
   </p>
 
   <p class="small">
     Cup Achtelfinale - HV TDP Stainz : SV Geistthal 4:2
+  </p>
+
+  <p class="small">
+    4. Runde - HV TDP Stainz : STT Multitask 2:4
+  </p>
+
+  <p class="small">
+    5. Runde - HV TDP Stainz : STT Wörgötter 3:4
   </p>
 
   <br>
@@ -99,22 +111,7 @@
   <hr>
 
   <p class="normal">
-    3. Runde - SAMSTAG, 16.09.2023 - 18:00 Uhr - Sportplatz Geistthal - SV Geistthal vs. HV TDP Stainz
-  </p>
-  <hr>
-
-  <p class="normal">
-    4. Runde - SAMSTAG, 23.09.2023 - 18:30 Uhr - Stadion Stainz - HV TDP Stainz vs. STT Multitask
-  </p>
-  <hr>
-
-  <p class="normal">
-    5. Runde - MITTWOCH, 27.09.2023 - 19:00 Uhr - Stadion Stainz - HV TDP Stainz vs. STT Wörgötter
-  </p>
-  <hr>
-
-  <p class="normal">
-    6. Runde - SAMSTAG, 07.10.2023 - 16:00 Uhr - Sportplatz St. Johann/Köppling - St. Johann/Köppling vs. HV TDP Stainz
+    6. Runde - SAMSTAG, 07.10.2023 - 16:00 Uhr - Sportplatz St. Johann/Köppling - St. Johann/Köppling : HV TDP Stainz
   </p>
   <hr>
 
@@ -124,7 +121,7 @@
   <hr>
 
   <p class="normal">
-    1. Runde - SAMSTAG, 28.10.2023 - 17:00 Uhr - Sportplatz Södingberg - STT Pichler vs. HV TDP Stainz
+    1. Runde - SAMSTAG, 28.10.2023 - 17:00 Uhr - Sportplatz Södingberg - STT Pichler : HV TDP Stainz
   </p>
   <hr>
 
