Update championship component

--- a/src/app/championship/championship.component.html
+++ b/src/app/championship/championship.component.html
@@ -102,17 +102,17 @@
     5. Runde - HV TDP Stainz : STT Wörgötter 3:4
   </p>
 
+
+  <p class="small">
+    6. Runde - St. Johann/Köppling : HV TDP Stainz 1:1
+  </p>
+
   <br>
 
   <p class="normal">
     <b>Spieltermine Herbst 2023:</b>
   </p>
 
-  <hr>
-
-  <p class="normal">
-    6. Runde - SAMSTAG, 07.10.2023 - 16:00 Uhr - Sportplatz St. Johann/Köppling - St. Johann/Köppling : HV TDP Stainz
-  </p>
   <hr>
 
   <p class="normal">
