--- a/src/app/championship/championship.component.html
+++ b/src/app/championship/championship.component.html
@@ -107,17 +107,16 @@
     6. Runde - St. Johann/Köppling : HV TDP Stainz 1:1
   </p>
 
+  <p class="small">
+    Cup Viertelfinale - HV TDP Stainz : STT Mauser 3:2
+  </p>
+
   <br>
 
   <p class="normal">
     <b>Spieltermine Herbst 2023:</b>
   </p>
 
-  <hr>
-
-  <p class="normal">
-    Cup Viertelfinale - Bei Aufstieg Heimspiel - FREITAG 13.10.2023 oder SAMSTAG 14.10.2023
-  </p>
   <hr>
 
   <p class="normal">
